--- a/card_product_preview/assets/styles/styles.css
+++ b/card_product_preview/assets/styles/styles.css
@@ -50,7 +50,7 @@ body {
 .cover-l {
   align-items: center;
   display: flex;
-  height: 100vh;
+  min-block-size: 100vh;
 }
 
 .stack-l {
@@ -135,18 +135,31 @@ CARD
   line-height: 1.1em;
 }
 
-@media screen and (min-width: 420px) {
+@media screen and (min-width: 400px) {
+  /** Layout ----------------*/
   .center-l {
     padding-inline-end: 2.2em;
     padding-inline-start: 2.2em;
   }
 
-  .card__media :nth-child(1) {
-    display: none;
+  .stack-l > * + * {
+    margin-block-start: 1rem;
+  }
+}
+
+@media screen and (min-width: 620px) {
+  /** Layout ----------------*/
+  .stack-l {
+    margin-block-start: 3.2rem;
+    margin-block-end: 3.2rem;
   }
 
-  .card__media :nth-child(2) {
-    display: block;
+  .stack-l > * + * {
+    margin-block-start: 2.3rem;
+  }
+
+  .card__text {
+    line-height: 1.5em;
   }
 }
 
