--- a/card_stats/assets/styles/styles.css
+++ b/card_stats/assets/styles/styles.css
@@ -1,7 +1,7 @@
 :root {
   /* colors */
   --color-accent: hsl(277, 64%, 61%);
-  --color-dark: hsla(244, 38%, 16%); /* accent background */
+  --color-dark: hsla(244, 38%, 16%);
   --color-darkish: hsl(233, 47%, 7%);
   --color-white: hsl(0, 0%, 100%);
   --color-white-transparent1: hsla(0, 0%, 100%, 0.75);
@@ -169,7 +169,7 @@ picture {
   content: '';
   left: 0;
   mix-blend-mode: multiply;
-  opacity: 0.95;
+  opacity: 0.75;
   position: absolute;
   right: 0;
   top: 0;
