--- a/card_nft_preview/assets/styles/styles.css
+++ b/card_nft_preview/assets/styles/styles.css
@@ -241,6 +241,10 @@ a:focus {
     margin-block-end: 0.5rem;
   }
 
+  .card__footer small {
+    font-size: var(--fs-text-small);
+  }
+
   .card__text {
     margin-block-start: 1rem;
   }
