--- a/card_four_feature/assets/styles/styles.css
+++ b/card_four_feature/assets/styles/styles.css
@@ -234,7 +234,8 @@ SECTION
 
 @media (min-width: 768px) {
   .section__header {
-    margin-block: 0;
+    margin-block-start: 0.5rem;
+    margin-block-end: 0;
   }
 
   .section__title,
