--- a/landing_page_elearning/assets/styles/styles.css
+++ b/landing_page_elearning/assets/styles/styles.css
@@ -125,6 +125,7 @@
 
 @media (min-width: 1040px) {
   .section-hero {
+    padding-block-start: 6.5rem;
     padding-block-end: 15.625rem;
   }
 
@@ -137,7 +138,7 @@
   }
 
   .section-hero .section__media {
-    height: 1085px;
+    height: 1090px;
     top: -24rem;
     right: -30rem;
   }
