--- a/card_order/assets/styles/styles.css
+++ b/card_order/assets/styles/styles.css
@@ -190,6 +190,7 @@ svg {
 ------------------------------------ */
 .card {
   border-radius: 1.25rem;
+  box-shadow: 0px 40px 40px -20px rgba(13, 48, 189, 0.151826);
   max-width: 28.125rem;
   overflow: hidden;
   text-align: center;
